# NeoLink_Dashboard

./: .gitignore  EULA.txt  README.md  SETTING  UI  aaa  aaa.py  aaab.py  start_indev.py  test1.py
NeoLink_Dashboard_backend/: .gitignore  Edition_logs.py  NeoLink_Dashboard.py  build.py  pyproject.toml  versions.py
NeoLink_Dashboard_backend/codes/: Edition_logs.py  Edition_logs.txt  NeoLink_Dashboard.py  Tools.py  TrafficForwarder.py  a.py  config.py  folder.py  versions.py
NeoLink_Dashboard_backend/codes/VersionSystem/: VersionSystem.py
NeoLink_Dashboard_backend/files/: index.html
NeoLink_Dashboard_backend/files/Images/: NeoLink_仪表盘_NeoLink_Dashboard.xcf  Posint 游戏平台.xcf
NeoLink_Dashboard_backend/files/assets/: Create-CjC_R6WC.js  Download-D5bqPGMW.css  Download-DIFq2L_S.js  Login-BfKmv6Xq.css  Login-CWfu0LEi.js  More-Bb40PiSb.js  More-DYqol-_i.css  Setting-CcW33lQ-.js  Setting-Dkf2UEbf.css  Setting_NeoLink-C4Ji6V8U.css  Setting_NeoLink-CmEOA6Gp.js  UserAgreementAndDisclaimer-B5G0GQGy.js  UserAgreementAndDisclaimer-DT_3cPfa.css  index-BX-LIwkB.css  index-CQ_8mcTc.js  index-CqOu4Sd-.js  index-nWSd81Ql.css
NeoLink_Dashboard_backend/files/fonts/sliced/SmileySans/: index.html
NeoLink_Dashboard_frontend/: README.md  index.html  package.json  pnpm-lock.yaml
NeoLink_Dashboard_frontend/public/: UserAgreementAndDisclaimer.md
NeoLink_Dashboard_frontend/src/: App.vue  Check.vue  StartAni.vue  main.ts
NeoLink_Dashboard_frontend/src/assets/: base.css  main.css
SV_CanNoPatch/: main.py  pyproject.toml
old/: .gitignore
(+23 files in other folders)
